fix align review h1

--- a/src/pages/review.css
+++ b/src/pages/review.css
@@ -43,7 +43,7 @@
 }
 
 .review-header h1 {
-    margin-left: 142px;
+    margin-left: 208px;
     margin-bottom: 23px;
 }
     
